[gd_scene load_steps=5 format=3 uid="uid://cfo524abu2acn"]

[ext_resource type="PackedScene" uid="uid://lvx7qosko02k" path="res://Common/Player/player_movement_rigid_body.tscn" id="1_biegp"]
[ext_resource type="Script" path="res://Common/Player/player_rigid_body.gd" id="1_i01lb"]
[ext_resource type="Texture2D" uid="uid://b6tic6v26tar" path="res://Common/Player/TestPlayerSprite2.png" id="2_eg7cs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_luyht"]
radius = 6.0

[node name="PlayerRigidBody" type="RigidBody2D"]
lock_rotation = true
script = ExtResource("1_i01lb")

[node name="PlayerMovementRigidBody" parent="." instance=ExtResource("1_biegp")]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_eg7cs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_luyht")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="GroundCheck" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 20)
